# compositor-cpp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  array.h  backend.h  buffer.cpp  buffer.h  callback.h  client.cpp  client.h  compositor.cpp  compositor.h  create_instance.h  create_interface.py  display.cpp  display.h  global.h  global_instance.h  impl_interface.h  instance.h  log.h  main.cpp  renderer.cpp  renderer.h  resource.cpp  resource.h  resource_ref.h  shell.cpp  shell.h  shell_surface.h  surface.cpp  surface.h  util.h  utils.h  wl_client.cpp  wl_client.h  wl_compositor.cpp  wl_compositor.h  wl_display.cpp  (+14 more)
backend/x11/: CMakeLists.txt  backend-x11.cpp  backend-x11.h
cmake/: CreateKarutaInterface.cmake  UseWaylandScanner.cmake
tests/: CMakeLists.txt
tests/src/: array_test.cpp  buffer_test.cpp  container_of_test.cpp  test_template.cpp
